--- a/weather_data.ipynb
+++ b/weather_data.ipynb
@@ -17,12 +17,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather_df = pd.read_csv(\"https://raw.githubusercontent.com/kaberry2/DSCI689/main/datasets/muncie_weather.csv\")"
+    "weather_df = pd.read_csv(\"https://raw.githubusercontent.com/kaberry2/DSCI689/main/datasets/muncie_weather.csv\")\n",
+    "entries_df = pd.read_csv(\"https://raw.githubusercontent.com/kaberry2/DSCI689/main/datasets/entries.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8929, 28)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,13 +248,33 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "weather_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(458791, 10)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entries_df.shape"
    ]
   },
   {
@@ -245,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +392,7 @@
        "[8929 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,15 +406,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['dt', 'dt_iso', 'timezone', 'city_name', 'lat', 'lon', 'temp',\n",
+       "       'visibility', 'dew_point', 'feels_like', 'temp_min', 'temp_max',\n",
+       "       'pressure', 'sea_level', 'grnd_level', 'humidity', 'wind_speed',\n",
+       "       'wind_deg', 'wind_gust', 'rain_1h', 'rain_3h', 'snow_1h', 'snow_3h',\n",
+       "       'clouds_all', 'weather_id', 'weather_main', 'weather_description',\n",
+       "       'weather_icon', 'timestamp', 'hour', 'date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Converting Kelvin / Other SI Units to Imperial Units (boo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_df['temp'] = (weather_df['temp']-273.15)*1.8 + 32\n",
+    "weather_df['rain_1h'] = weather_df['rain_1h']/2.54\n",
+    "weather_df['rain_3h'] = weather_df['rain_3h']/2.54\n",
+    "weather_df['snow_1h'] = weather_df['snow_1h']/2.54\n",
+    "weather_df['snow_3h'] = weather_df['snow_3h']/2.54\n",
+    "weather_df['wind_speed'] = weather_df['wind_speed']*2.237\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grouping / Aggregating based on Day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_weather_df = weather_df.groupby('date').agg({'temp': ['mean', 'min', 'max'],\n",
+    "                                                       'humidity': 'mean',\n",
+    "                                                       'wind_speed': 'mean',\n",
+    "                                                       'rain_1h': 'median',\n",
+    "                                                       'rain_3h': 'median',\n",
+    "                                                       'snow_1h': 'median',\n",
+    "                                                       'snow_3h': 'median'})\n",
+    "\n",
+    "aggregated_weather_df.columns = ['temp_mean', 'temp_min', 'temp_max', 'humidity_mean', 'wind_speed_mean', \n",
+    "                                'rain_1h_median', 'rain_3h_median', 'snow_1h_median', 'snow_3h_median']\n",
+    "\n",
+    "aggregated_weather_df = aggregated_weather_df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# from pathlib import Path\n",
+    "# path = Path(\"C:/Users/Collin/Desktop/Academic/Courses/DSCI 689/Group Analysis/agg_weather.csv\")\n",
+    "# path.parent.mkdir(parents = True, exist_ok = True)\n",
+    "# aggregated_weather_df.to_csv(path)"
+   ]
   },
   {
    "cell_type": "code",
