forgot to display the dataframe inside the ipynb

--- a/weather_data.ipynb
+++ b/weather_data.ipynb
@@ -490,10 +490,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>temp_mean</th>\n",
+       "      <th>temp_min</th>\n",
+       "      <th>temp_max</th>\n",
+       "      <th>humidity_mean</th>\n",
+       "      <th>wind_speed_mean</th>\n",
+       "      <th>rain_1h_median</th>\n",
+       "      <th>rain_3h_median</th>\n",
+       "      <th>snow_1h_median</th>\n",
+       "      <th>snow_3h_median</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>30.593429</td>\n",
+       "      <td>23.468</td>\n",
+       "      <td>35.708</td>\n",
+       "      <td>86.571429</td>\n",
+       "      <td>10.958104</td>\n",
+       "      <td>0.228346</td>\n",
+       "      <td>0.708661</td>\n",
+       "      <td>0.344488</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>35.883846</td>\n",
+       "      <td>33.044</td>\n",
+       "      <td>41.900</td>\n",
+       "      <td>88.307692</td>\n",
+       "      <td>6.814246</td>\n",
+       "      <td>0.110236</td>\n",
+       "      <td>0.196850</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-01-03</td>\n",
+       "      <td>34.030000</td>\n",
+       "      <td>32.900</td>\n",
+       "      <td>35.456</td>\n",
+       "      <td>90.777778</td>\n",
+       "      <td>6.575951</td>\n",
+       "      <td>0.098425</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.098425</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-01-04</td>\n",
+       "      <td>33.717500</td>\n",
+       "      <td>31.082</td>\n",
+       "      <td>39.974</td>\n",
+       "      <td>85.291667</td>\n",
+       "      <td>4.085321</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-01-05</td>\n",
+       "      <td>32.103333</td>\n",
+       "      <td>29.318</td>\n",
+       "      <td>34.898</td>\n",
+       "      <td>89.666667</td>\n",
+       "      <td>7.928922</td>\n",
+       "      <td>0.051181</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.196850</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date  temp_mean  temp_min  temp_max  humidity_mean  wind_speed_mean  \\\n",
+       "0  2021-01-01  30.593429    23.468    35.708      86.571429        10.958104   \n",
+       "1  2021-01-02  35.883846    33.044    41.900      88.307692         6.814246   \n",
+       "2  2021-01-03  34.030000    32.900    35.456      90.777778         6.575951   \n",
+       "3  2021-01-04  33.717500    31.082    39.974      85.291667         4.085321   \n",
+       "4  2021-01-05  32.103333    29.318    34.898      89.666667         7.928922   \n",
+       "\n",
+       "   rain_1h_median  rain_3h_median  snow_1h_median  snow_3h_median  \n",
+       "0        0.228346        0.708661        0.344488             NaN  \n",
+       "1        0.110236        0.196850             NaN             NaN  \n",
+       "2        0.098425             NaN        0.098425             NaN  \n",
+       "3             NaN             NaN             NaN             NaN  \n",
+       "4        0.051181             NaN        0.196850             NaN  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aggregated_weather_df.head()"
+   ]
   },
   {
    "cell_type": "code",
